@@ -1,3 +1,12 @@
+2005-03-28  Philippe Gerum  <rpm@xenomai.org>
+
+	* testsuite/cruncher/cruncher.c (main): Limit stack space of
+	spawned threads to PTHREAD_STACK_MIN * 2.
+
+	* skins/rtai/lib/task.c (rt_task_create): Limit stack space to
+	PTHREAD_STACK_MIN * 2 when none has been specified. 1Mb default is
+	clearly overkill for real-time threads.
+
 2005-03-28  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>
 
 	* include/nucleus/asm-i386/system.h (xnarch_save_fpu): Save
